styling fix: Wrong width on some devices (my device)

--- a/src/app/userpage/component.module.scss
+++ b/src/app/userpage/component.module.scss
@@ -128,7 +128,6 @@
 
 @media ((min-width:1024px) or ((max-width:1024px) and (orientation:landscape))) {
     .listContainer {
-        width: 45%;
         margin: auto auto;
         margin-top:0;
     }
